--- a/src/base.css
+++ b/src/base.css
@@ -1,9 +1,5 @@
-@import "tailwindcss/base";
+@tailwind base;
 
-@import "tailwindcss/components";
+@tailwind components;
 
-@import "tailwindcss/utilities";
-
-html, body, * {
-    font-family: "Open Sans", sans-serif;
-}
+@tailwind utilities;
